_kubernetes/_tools/database/10_pgadmin.yaml
##################################################################################################
# pgadmin
##################################################################################################
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  labels:
    app: pgadmin
    service: pgadmin
spec:
  ports:
  - port: 80
    name: tcp
  selector:
    app: pgadmin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  labels:
    app: pgadmin
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
      version: v1
  template:
    metadata:
      labels:
        app: pgadmin
        version: v1
    spec:
      serviceAccountName: pgadmin
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
      containers:
        - name: pgadmin
          image: dpage/pgadmin4
          imagePullPolicy: IfNotPresent 
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 250m
              memory: 250Mi
          tty: true
          ports:
            - containerPort: 80
          volumeMounts:
          - name: pgadmin
            mountPath: /var/lib/pgadmin
      volumes:
      - name: pgadmin
        persistentVolumeClaim:
          claimName: pgadmin
